data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2524.wast
;; 3. **Test Description:**    - Test a looping construct that calls an exported function containing `br_table` with labels targeting different levels of the loop, including a default label returning to the caller function's context. Ensure control flow integrity upon returning to the caller.    - **Constraint:** Ensures the `br_table` correctly maps labels across loop constructs to the calling module's context.    - **Control Flow Boundary Check:** Validates handling of backward branches within exported functions looping back to calling context.

(assert_invalid
  (module
    (func (export "test") (param i32)
      (block $exit (result i32)
        (loop $loop (result i32)
          (block $middle
            (br_table $middle $exit $loop (local.get 0))
          )
        )
      )
    )
  )
  "type mismatch"
)